load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "test_data",
    testonly = True,
    srcs = ["test_data.cc"],
    hdrs = ["test_data.h"],
    deps = [
        "//gutil:testing",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "p4_blackbox_fixture",
    testonly = True,
    hdrs = ["p4_blackbox_fixture.h"],
    deps = [
        "//gutil:status_matchers",
        "//lib/gnmi:gnmi_helper",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:pd",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "smoke_test",
    testonly = True,
    srcs = ["smoke_test.cc"],
    hdrs = ["smoke_test.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":p4_blackbox_fixture",
        ":test_data",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//gutil:testing",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:pd",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)

cc_library(
    name = "master_arbitration_test",
    testonly = True,
    srcs = ["master_arbitration_test.cc"],
    hdrs = ["master_arbitration_test.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":p4_blackbox_fixture",
        "//gutil:status_matchers",
        "//gutil:testing",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//thinkit:test_environment",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_grpc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/numeric:int128",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@com_google_googleapis//google/rpc:code_cc_proto",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)
