# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "packet_in_helper",
    testonly = True,
    srcs = ["packet_in_helper.cc"],
    hdrs = ["packet_in_helper.h"],
    deps = [
        "//p4_pdpi:p4_runtime_session",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "p4info_helper",
    testonly = True,
    srcs = ["p4info_helper.cc"],
    hdrs = ["p4info_helper.h"],
    deps = [
        "//gutil:collections",
        "//p4_pdpi:ir_cc_proto",
    ],
)

cc_test(
    name = "p4info_helper_test",
    srcs = ["p4info_helper_test.cc"],
    deps = [
        ":p4info_helper",
        "//p4_pdpi:ir_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "p4rt_fixed_table_programming_helper",
    testonly = True,
    srcs = ["p4rt_fixed_table_programming_helper.cc"],
    hdrs = ["p4rt_fixed_table_programming_helper.h"],
    deps = [
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "p4rt_fixed_table_programming_helper_test",
    srcs = ["p4rt_fixed_table_programming_helper_test.cc"],
    deps = [
        ":p4rt_fixed_table_programming_helper",
        "//gutil:status_matchers",
        "//p4_pdpi:ir_cc_proto",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "switch_test_setup_helpers",
    testonly = True,
    srcs = ["switch_test_setup_helpers.cc"],
    hdrs = ["switch_test_setup_helpers.h"],
    deps = [
        "//gutil:proto",
        "//lib/gnmi:gnmi_helper",
        "//p4_pdpi:p4_runtime_session",
        "//tests:thinkit_sanity_tests",
        "//thinkit:switch",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
    ],
)
