load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "system_call_adapter",
    srcs = ["system_call_adapter.cc"],
    hdrs = ["system_call_adapter.h"],
)

cc_library(
    name = "mock_system_call_adapter",
    testonly = True,
    hdrs = ["mock_system_call_adapter.h"],
    deps = [
        ":system_call_adapter",
        "@com_google_googletest//:gtest_main",
        #"//testing/base/public:gmock_no_google3",
        #"//testing/base/public:gunit_no_google3",
    ],
)
